[project]
name = "cipherbox"
version = "0.1.0"
description = "Simple encryption/decryption CLI (AES, Base64, XOR)"
authors = [ { name = "Bima Rizki" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"pycryptodome>=3.18.0"
]


[project.scripts]
cipherbox = "cipherbox.cli:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"